# chrono-color

./: .gitignore  README.md  pyproject.toml  simple_download.py
modal/: modal_app.py  modal_inference.py
notebooks/: 01_data_exploration.ipynb
src/: config.py
src/data_loading/: datasets.py  transforms.py
src/modeling/: __init__.py  discriminator.py  generator.py
src/scripts/: process_images.py  test_models.py  train.py
src/training/: losses.py  trainer.py
src/utils/: model_utils.py  visualize_training.py
